--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<header>
-</header>
-
 <body>
+    <h1>Shivanshi's Component Library</h1>
+    <p>Component library which would make all my projects look good and consistent.</p>
+
+    <hr>
+
+    <h2>@Typography</h2>
+
+
+
+
+
+
+
 </body>
 
 <footer>
