--- a/index.html
+++ b/index.html
@@ -16,8 +16,52 @@
 
     <h2>@Typography</h2>
 
+    <h1>This is the biggest heading</h1>
+    <h2>This is the second biggest</h2>
+    <p>Normal text, will be wrapped at the end of the para</p>
+    <small>Relatively smaller text</small>
 
+    <hr>
 
+    <h2>@containers</h2>  
+
+    <h3>Fluid container</h3>
+    <div>This is a fluid container and it will go till the end of the page</div>
+
+    <h3>Fluid container</h3>
+    <div>This is a fluid container and it will go till the end of the page</div>
+
+    <hr>
+
+     <h2>@Links</h2>
+     <a href="/">Primary link</a>
+     <a href="/">Seconday Link</a>
+
+     <hr>
+
+    <h2>@Lists</h2>
+    <h3>Unordered List</h3>
+        <ul>
+            <li>Item one</li>
+            <li>Item two</li>
+            <li>Item three</li>
+        </ul>
+    <h3>Unordered Inline list</h3>
+        <ul>
+            <li>Inline item one</li>
+            <li>Inlinle item two</li>
+            <li>Inline item three</li>
+        </ul>
+    <h3>Reverse Ordered list</h3>
+        <ol>
+            <li>Milk</li>
+            <li>eggs</li>
+            <li>Bread</li>
+        </ol>
+
+    <hr>
+
+    <h2>@Nav </h2>
 
 
 
