--- a/index.html
+++ b/index.html
@@ -63,12 +63,56 @@
 
     <h2>@Nav </h2>
 
+    <nav>
+            <div>IamBrand</div>
+            <ul>
+                <li>
+                    <a href="/">home</a>
+                </li>
+                <li>
+                    <a href="/">products</a>
+                </li>
+                <li>
+                    <a href="/">about</a>
+                </li>
+            </ul>
+    </nav>
+
+    <hr>
+
+    <h2>@Header</h2>
+    <header>
+        <img src="images/dev.png" alt=""> <!--#DB2777-->
+        <h1>Heading inside header</h1>
+    </header>
+
+    <hr>
+
+    <h2>@Section</h2>
+    <section>
+        <h3>white section</h3>
+        <p>This will have white background</p>
+    </section>
+
+    <section>
+        <h3>offwhite section</h3>
+        <p>This willgray background</p>
+    </section>
+
+    <hr>
+
+    <footer>
+        <div>Some small heading inside footer</div>
+        <ul>
+            <li>SocialOne</li>
+            <li>SocialTwo</li>
+            <li>SocialThree</li>
+        </ul>
+    </footer>
+
+    
 
 
 
 </body>
-
-<footer>
- </footer>
-
 </html>
