--- a/index.html
+++ b/index.html
@@ -26,34 +26,34 @@
     <h2>@containers</h2>  
 
     <h3>Fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <div class="container containter-fluid">This is a fluid container and it will go till the end of the page</div>
 
-    <h3>Fluid container</h3>
-    <div>This is a fluid container and it will go till the end of the page</div>
+    <h3>Center container</h3>
+    <div class="container container-center">This is a fluid container and it will go till the end of the page</div>
 
     <hr>
 
      <h2>@Links</h2>
-     <a href="/">Primary link</a>
-     <a href="/">Seconday Link</a>
+     <a class="link primary-link" href="/">Primary link</a>
+     <a class="link secondary-link" href="/">Secondary Link</a>
 
      <hr>
 
     <h2>@Lists</h2>
     <h3>Unordered List</h3>
-        <ul>
+        <ul class="list-non-bullet">
             <li>Item one</li>
             <li>Item two</li>
             <li>Item three</li>
         </ul>
     <h3>Unordered Inline list</h3>
-        <ul>
-            <li>Inline item one</li>
-            <li>Inlinle item two</li>
-            <li>Inline item three</li>
+        <ul class="list-non-bullet">
+            <li class="list-inline">Inline item one</li>
+            <li class="list-inline">Inline item two</li>
+            <li class="list-inline">Inline item three</li>
         </ul>
     <h3>Reverse Ordered list</h3>
-        <ol>
+        <ol reversed>
             <li>Milk</li>
             <li>eggs</li>
             <li>Bread</li>
@@ -63,17 +63,17 @@
 
     <h2>@Nav </h2>
 
-    <nav>
-            <div>IamBrand</div>
-            <ul>
-                <li>
-                    <a href="/">home</a>
+    <nav class="navigation container">
+            <div class="nav-brand">IamBrand</div>
+            <ul class="list-non-bullet nav-pills">
+                <li class="list-inline">
+                    <a class="link link-active" href="/">home</a>
                 </li>
-                <li>
-                    <a href="/">products</a>
+                <li class="list-inline">
+                    <a class="link" href="/">products</a>
                 </li>
-                <li>
-                    <a href="/">about</a>
+                <li class="list-inline">
+                    <a class="link" href="/">about</a>
                 </li>
             </ul>
     </nav>
@@ -81,32 +81,37 @@
     <hr>
 
     <h2>@Header</h2>
-    <header>
-        <img src="images/dev.png" alt=""> <!--#DB2777-->
-        <h1>Heading inside header</h1>
+    <header class="hero">
+        <img class="hero-img" src="images/dev.png" alt=""> <!--#DB2777-->
+        <h1 class="hero-heading">Heading inside header</h1>
     </header>
 
     <hr>
 
     <h2>@Section</h2>
-    <section>
-        <h3>white section</h3>
+    <section class="section">
+        <div class="container container-center">
+            <h1>white section</h1>
         <p>This will have white background</p>
+        </div>
+        
     </section>
 
-    <section>
-        <h3>offwhite section</h3>
+    <section class="section off-white">
+        <div class="container container-center">
+            <h1>offwhite section</h1>
         <p>This willgray background</p>
+        </div>   
     </section>
 
     <hr>
 
-    <footer>
-        <div>Some small heading inside footer</div>
-        <ul>
-            <li>SocialOne</li>
-            <li>SocialTwo</li>
-            <li>SocialThree</li>
+    <footer class="footer">
+        <div class="footer-header">Some small heading inside footer</div>
+        <ul class="list-non-bullet">
+            <li class="list-inline"> <a class="link" href="/">SocialOne</a></li>
+            <li class="list-inline"> <a class="link" href="/">SocialTwo</a></li>
+            <li class="list-inline"> <a class="link" href="/">SocialThree</a></li>
         </ul>
     </footer>
 
