--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Shivanshi</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/images/favicon/favicon.ico">
 </head>
 <body>
  
@@ -16,10 +17,10 @@
                 <a class="link link-active" href="/">Home</a>
             </li>
             <li class="list-inline">
-                <a class="link" href="/">Projects</a>
+                <a class="link" href="projects.html">Projects</a>
             </li>
             <li class="list-inline">
-                <a class="link" href="/">Blogs</a>
+                <a class="link" href="blogs.html">Blogs</a>
             </li>
         </ul>
 </nav>
