--- a/Lib/components.html
+++ b/Lib/components.html
@@ -100,7 +100,7 @@
     <section class="section off-white">
         <div class="container container-center">
             <h1>offwhite section</h1>
-        <p>This willgray background</p>
+        <p>This will have gray background</p>
         </div>   
     </section>
 
