--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container container-center">
         <h1>Projects</h1>
     <p> I like to showcase my work and thus, you can see my projects that are hosted online</p>
-    <a class="link primary-link" href="/">Browse Projects</a>
+    <a class="link primary-link" href="projects.html">Browse Projects</a>
     </div>
 </section>
 
@@ -49,7 +49,7 @@
     <div class="container container-center">
         <h1>Blogs</h1>
     <p>I like to write technical and Non-technical Blogs. Click to know more!</p>
-    <a class="link primary-link" href="/">Browse Blogs</a>
+    <a class="link primary-link" href="blogs.html">Browse Blogs</a>
     </div>   
 </section>
 
