--- a/projects.html
+++ b/projects.html
@@ -25,8 +25,56 @@
 
 <header class="hero">
     <h1 class="hero-heading">My Projects</h1>
-    <h2>Blog #1</h2>
-  </header>
+      </header>
+
+
+  <ul>
+    <li>
+        <div class="container container-fluid">
+        <h1>The Office Trivia</h1>
+        <small>April,2020</small>
+        <p>A CLI NodeJS App built as an assignment. Let's test your knowledge about The Office with this quiz!</p>
+        <a class="link primary-link" href="https://replit.com/@shivanshis/THE-OFFICE-TRIVIA?lite=1&outputonly=1" target="_blank">Live Project</a>
+        <a class="link secondary-link" href="https://github.com/shivanshi-s/CLI-App"target="_blank">View Source</a>
+        </div>
+    </li>
+
+    <li>
+        <div class="container container-fluid">
+        <h1>Pawsting : Meet Cats</h1>
+        <small>May,2020</small>
+        <p>A Landing page based on "Tinder for Cats" built with HTML5, CSS3 and Bootstrap v4.6. Find the true love of your cat's life today!</p>
+
+        <a class="link primary-link" href="https://pawsting-s.netlify.app/"target="_blank">Live Project</a>
+        <a class="link secondary-link" href="https://github.com/shivanshi-s/Pawsting"target="_blank">View Source</a>
+    </div>
+    </li>
+
+    
+      <li>
+        <div class="container container-fluid">
+          <h1>How well do you know me?</h1>
+          <small>April,2020</small>
+          <p>Another CLI App built with NodeJS. Send this to your friends and find out who really knows you!</p>
+
+          <a class="link primary-link" href="https://replit.com/@shivanshis/AQuiz-AboutMe?lite=1&outputonly=1"target="_blank">Live Project</a>
+          <a class="link secondary-link" href="https://github.com/shivanshi-s/CLI-App"target="_blank">View Source</a>
+        </div>
+      </li>
+
+
+  </ul>
+
+
+
+  <footer class="footer">
+    <div class="footer-header">Connect with me on Social Media!</div>
+    <ul class="list-non-bullet">
+        <li class="list-inline"> <a class="link" href="https://github.com/shivanshi-s" target="_blank">GitHub</a></li>
+        <li class="list-inline"> <a class="link" href="https://www.linkedin.com/in/shivanshi-saxena12/" target="_blank">LinkedIn</a></li>
+        <li class="list-inline"> <a class="link" href="https://twitter.com/whatshivanshi" target="_blank">Twitter</a></li>
+    </ul>
+</footer>
 
 
 </body>
