--- a/blogs.html
+++ b/blogs.html
@@ -28,7 +28,20 @@
     
     <header class="hero">
       <h1 class="hero-heading">My Blogs</h1>
-      <h2>Project #1</h2>
+      <h2>Blog #1</h2>
     </header>
+
+
+
+
+    <footer class="footer">
+        <div class="footer-header">Connect with me on Social Media!</div>
+        <ul class="list-non-bullet">
+            <li class="list-inline"> <a class="link" href="https://github.com/shivanshi-s" target="_blank">GitHub</a></li>
+            <li class="list-inline"> <a class="link" href="https://www.linkedin.com/in/shivanshi-saxena12/" target="_blank">LinkedIn</a></li>
+            <li class="list-inline"> <a class="link" href="https://twitter.com/whatshivanshi" target="_blank">Twitter</a></li>
+        </ul>
+    </footer>
+    
 </body>
 </html>
