--- a/index.html
+++ b/index.html
@@ -28,18 +28,19 @@
 <header class="hero">
     <img class="hero-img" src="images/dev.png" alt=""> <!--#DB2777-->
     <h1 class="hero-heading">Learner | Developer</h1>
+    
 </header>
 
 <section class="section off-white">
     <div class="container container-center">
-        <h1>Technologies</h1>
+        <h1 class="section-head">Technologies</h1>
     <p>I am familiar with HTML, CSS, Git, JavaScript, C/C++ and Web Hosting</p>
     </div>   
 </section>
 
 <section class="section">
     <div class="container container-center">
-        <h1>Projects</h1>
+        <h1 class="section-head">Projects</h1>
     <p> I like to showcase my work and thus, you can see my projects that are hosted online</p>
     <a class="link primary-link" href="projects.html">Browse Projects</a>
     </div>
@@ -47,7 +48,7 @@
 
 <section class="section off-white">
     <div class="container container-center">
-        <h1>Blogs</h1>
+        <h1 class="section-head">Blogs</h1>
     <p>I like to write technical and Non-technical Blogs. Click to know more!</p>
     <a class="link primary-link" href="blogs.html">Browse Blogs</a>
     </div>   
