--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects | Shivanshi </title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="/images/favicon/favicon.ico">
 </head>
 <body>
     <nav class="navigation container">
@@ -27,19 +28,48 @@
     <h1 class="hero-heading">My Projects</h1>
       </header>
 
-
-  <ul>
-    <li>
+      <section class="section off-white">
         <div class="container container-fluid">
         <h1>The Office Trivia</h1>
         <small>April,2020</small>
         <p>A CLI NodeJS App built as an assignment. Let's test your knowledge about The Office with this quiz!</p>
         <a class="link primary-link" href="https://replit.com/@shivanshis/THE-OFFICE-TRIVIA?lite=1&outputonly=1" target="_blank">Live Project</a>
         <a class="link secondary-link" href="https://github.com/shivanshi-s/CLI-App"target="_blank">View Source</a>
-        </div>
-    </li>
+        </div>   
+    </section>
 
-    <li>
+    <section class="section ">
+        <div class="container container-fluid">
+            <h1>Pawsting : Meet Cats</h1>
+            <small>May,2020</small>
+            <p>A Landing page based on "Tinder for Cats" built with HTML5, CSS3 and Bootstrap v4.6. Find the true love of your cat's life today!</p>
+    
+            <a class="link primary-link" href="https://pawsting-s.netlify.app/"target="_blank">Live Project</a>
+            <a class="link secondary-link" href="https://github.com/shivanshi-s/Pawsting"target="_blank">View Source</a>
+        </div>   
+    </section>
+
+    <section class="section off-white">
+        <div class="container container-fluid">
+            <h1>How well do you know me?</h1>
+            <small>April,2020</small>
+            <p>Another CLI App built with NodeJS. Send this to your friends and find out who really knows you!</p>
+  
+            <a class="link primary-link" href="https://replit.com/@shivanshis/AQuiz-AboutMe?lite=1&outputonly=1"target="_blank">Live Project</a>
+            <a class="link secondary-link" href="https://github.com/shivanshi-s/CLI-App"target="_blank">View Source</a>
+    </section>
+  <!-- <ul>
+    <li class="spacing ">
+        <div class="container ">
+        <h1>The Office Trivia</h1>
+        <small>April,2020</small>
+        <p>A CLI NodeJS App built as an assignment. Let's test your knowledge about The Office with this quiz!</p>
+        <a class="link primary-link" href="https://replit.com/@shivanshis/THE-OFFICE-TRIVIA?lite=1&outputonly=1" target="_blank">Live Project</a>
+        <a class="link secondary-link" href="https://github.com/shivanshi-s/CLI-App"target="_blank">View Source</a>
+        </div>
+    </li> <hr>
+
+    <li class="spacing">
         <div class="container container-fluid">
         <h1>Pawsting : Meet Cats</h1>
         <small>May,2020</small>
@@ -51,7 +81,7 @@
     </li>
 
     
-      <li>
+      <li class="spacing" >
         <div class="container container-fluid">
           <h1>How well do you know me?</h1>
           <small>April,2020</small>
@@ -63,7 +93,7 @@
       </li>
 
 
-  </ul>
+  </ul> -->
 
 
 
