--- a/blogs.html
+++ b/blogs.html
@@ -29,27 +29,38 @@
     
     <header class="hero">
       <h1 class="hero-heading">My Blogs</h1>
-      <h2 style="text-align: center;">Coming Soon...</h2>
+      <h2 style="text-align: center;">These are some of the blogs I've written over the past years...</h2>
     </header>
 
 
 
 <section class="section">
         <h2>Around the world in 80 Seconds</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scel<span id="dots">...</span><span id="more">erisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+    <p>Today was a nice, cloudy day. Nice enough for me to pick out a book and sit in the balcony with a coffee in hand, away from my laptop, which I love, very much. I believe every programmer should have the habit of reading, even if it is just one page a day. So here are some books (coding and non-coding) that I enjoyed!......... <a href="https://medium.com/@whatshivanshi/around-the-world-in-80-seconds-c65c44e01440">Read More</a></p>
 </section>
 
 <section class="section off-white">
-        <h2>Blog no.2 here</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>JavaScript Project - Drum Kit.</h2>
+    <p>Being a student and a developer, it is important for one to learn and grow constantly. A while back, I started learning JavaScript and found it a little tricky for my C++ hard-wired brain to grasp on. Since then, I decided to learn JavaScript concepts while building simple projects and this is where the JavaScript30 by Wes Bos showed up.
 
+        So, let's build the first project !......... <a href="https://whatshivanshi.hashnode.dev/javascript-project-drum-kit">Read More</a></p>
 </section>
 
 <section class="section">
-    <h2>Blog no.3 here</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem egestas vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae massa. Fusce luctus vestibulum augue ut aliquet. Nunc sagittis dictum nisi, sed ullamcorper ipsum dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta.</span></p>
+    <h2>Resources to learn Python this new Year! </h2>
+    <p>A very crucial step next to picking a language, is to choose the right resources to learn it. With the vast connectivity of the world out there, it is really easy to get lost between one course or the other. My belief is that learning how to code should be free and accessible to everyone and most of the time it is, we just have to stretch a limb and look for what suits us the best........ <a href="https://whatshivanshi.hashnode.dev/resources-to-learn-python-this-new-year">Read More</a></p>
 </section>
 
+<section class="section off-white">
+    <h2>How to become a Microsoft Learn Student Ambassador (MLSA).</h2>
+    <p>If you’re active on a social media platform or in tech communities, you probably must’ve heard about ‘Microsoft Learn Student Ambassador’ or the MLSA program and that is amazing, the first step towards anything is wanting to know about it!
+        So, let’s get into how you can become one and what it is about !....... <a href="https://medium.com/@whatshivanshi/how-to-become-a-microsoft-learn-student-ambassador-mlsa-from-applying-to-engaging-b99ac4092903">Read More</a></p>
+</section>
+
+<section class="section">
+    <h2>Professional Networking ftw!</h2>
+    <p>In today's well-connected world, your connections tell your story as much as you do. It becomes increasingly important to give your time, thought and work into the connections you build in your professional life and maintain them while moving forward and maintain your personal brand!..... <a href="https://whatshivanshi.hashnode.dev/professional-networking-ftw">Read More</a></p>
+</section>
 
 
     <footer class="footer">
