--- a/projects.html
+++ b/projects.html
@@ -56,7 +56,7 @@
             <p>Mark 3 requires a link to GitHub and the repository links on my portfolio</p>
   
             <a class="link primary-link" href="https://github.com/shivanshi-s?tab=repositories"target="_blank">Github Link</a>
-            <a class="link secondary-link" href="shivanshi-portfolio.netlify.app/"target="_blank">Portfolio Link</a>
+            <a class="link secondary-link" href="https://shivanshi-neog.netlify.app/"target="_blank">Portfolio Link</a>
     </section>
 
     <section class="section ">
@@ -65,7 +65,7 @@
             <small>May,2020</small>
             <p>Portfolio made during neoGcamp level Zero</p>
     
-            <a class="link primary-link" href="shivanshi-portfolio.netlify.app/"target="_blank">Live Project</a>
+            <a class="link primary-link" href="https://shivanshi-neog.netlify.app/"target="_blank">Live Project</a>
             <a class="link secondary-link" href="https://github.com/shivanshi-s/Portfolio"target="_blank">View Source</a>
         </div>   
     </section>
